--- a/ml/basis-functions/spline.ipynb
+++ b/ml/basis-functions/spline.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-08-24T02:05:14.670640",
+     "start_time": "2016-08-24T02:05:14.421194"
+    },
     "collapsed": false,
     "run_control": {
      "frozen": false,
@@ -13,6 +17,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy as sp\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -30,8 +35,14 @@
     "from IPython.display import Latex\n",
     "from IPython.display import HTML\n",
     "\n",
-    "from pprint import print\n",
-    "import functools as ft"
+    "from pprint import pprint\n",
+    "import functools as ft\n",
+    "\n",
+    "from graphviz import Digraph\n",
+    "\n",
+    "DIR_HOME = os.environ['HOME']\n",
+    "DIR_REPOS = DIR_HOME + \"/neo-human/repos\"\n",
+    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\""
    ]
   },
   {
@@ -322,10 +333,144 @@
     "\\newcommand{\\Nstdx}{\\Nl{\\mathbf{x}}{\\mathbf{\\mu}}{\\Sigma}}\n",
     "$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-09-01T06:39:58.071736",
+     "start_time": "2016-09-01T06:39:58.019580"
+    },
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HTML' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-39736560299d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHTML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"<style>\"\u001b[0m    \u001b[0;34m\"div.cell{\"\u001b[0m        \u001b[0;34m\"width:100%;\"\u001b[0m        \u001b[0;34m\"margin-left:0%;\"\u001b[0m        \u001b[0;34m\"margin-right:auto;\"\u001b[0m    \u001b[0;34m\"}\"\u001b[0m\u001b[0;34m\"</style>\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'HTML' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "HTML(\"<style>\"\\\n",
+    "    \"div.cell{\"\\\n",
+    "        \"width:100%;\"\\\n",
+    "        \"margin-left:0%;\"\\\n",
+    "        \"margin-right:auto;\"\\\n",
+    "    \"}\"\\\n",
+    "\"</style>\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The essential idea is to fit a piecewise function of the form\n",
+    "$$\n",
+    "S(x) = \\cases{\n",
+    "s_1(x) & \\text{ if } & x_1 \\le x \\lt x_2 \\\\\n",
+    "s_2(x) & \\text{ if } & x_2 \\le x \\lt x_3 \\\\\n",
+    "& \\vdots & \\\\\n",
+    "s_{n-1}(x) & \\text{ if } & x_{n-1} \\le x \\lt x_n \\\\\n",
+    "}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let\n",
+    "$$\n",
+    "s_i(x) = a_i (x-x_i)^3 + b_i (x-x_i)^2 + c_i (x-x_i) + d_i\n",
+    "$$\n",
+    "Then\n",
+    "$$\n",
+    "s_i^{\\prime}       (x) = 3 a_i (x-x_i)^2 + 2 b_i (x-x_i) + c_i\\\\\n",
+    "s_i^{\\prime \\prime}(x) = 6 a_i (x-x_i) + 2 b_i\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
