--- a/books/eosl/05-01-spline-interpolation.ipynb
+++ b/books/eosl/05-01-spline-interpolation.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-09-01T05:59:51.687920",
+     "start_time": "2016-09-01T05:59:51.379010"
+    },
     "collapsed": false,
     "run_control": {
      "frozen": false,
@@ -325,6 +329,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-09-01T06:45:00.413840",
+     "start_time": "2016-09-01T06:45:00.410422"
+    },
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>div.cell{width:100%;margin-left:0%;margin-right:auto;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML(\"<style>\"\\\n",
+    "    \"div.cell{\"\\\n",
+    "        \"width:100%;\"\\\n",
+    "        \"margin-left:0%;\"\\\n",
+    "        \"margin-right:auto;\"\\\n",
+    "    \"}\"\\\n",
+    "\"</style>\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,6 +398,7 @@
     "$$\n",
     "q =(1-t)y_1 + ty_2+ t(1-t) (a(1-t) + bt)\n",
     "$$\n",
+    "\n",
     "where\n",
     "$$\n",
     "\\arrthree{\n",
@@ -642,7 +686,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -658,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1+"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -667,10 +711,14 @@
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
   },
+  "nav_menu": {},
   "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": false,
+   "threshold": 6,
    "toc_cell": false,
-   "toc_number_sections": true,
-   "toc_threshold": 6,
+   "toc_section_display": "block",
    "toc_window_display": false
   }
  },
