--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -342,7 +342,11 @@
      "end_time": "2016-08-24T02:05:43.633282",
      "start_time": "2016-08-24T02:05:43.628864"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -371,7 +375,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
