--- a/math/probability-distributions/cauchy.ipynb
+++ b/math/probability-distributions/cauchy.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -319,13 +323,25 @@
     "$$  \n",
     "so the mean does not exist. If you simulate a Cauchy distribution many times and take the average, you will see that the average never settles down. This is because the Cauchy has thick tails and hence extreme observations are common  \\cite{Wasserman2010}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "<mark> <b>The bib file biblio.bib was not found\n",
+    "\n",
+    "</b> </mark>(<a id=\"cit-Wasserman2010\" href=\"#call-Wasserman2010\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -338,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -346,6 +362,16 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": false,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
