--- a/statistics/all-of-statistics/3-expectation.ipynb
+++ b/statistics/all-of-statistics/3-expectation.ipynb
@@ -1471,7 +1471,7 @@
    "threshold": 6,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "toc_position": {
    "height": "370px",
