--- a/statistics/all-of-statistics/2-random-variables-2.ipynb
+++ b/statistics/all-of-statistics/2-random-variables-2.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -25,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -369,7 +377,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -391,7 +403,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -566,7 +582,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -682,7 +702,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -712,7 +736,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -745,7 +773,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -775,7 +807,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -821,7 +857,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -855,7 +895,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -874,7 +918,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -970,7 +1018,11 @@
      10,
      12
     ],
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -998,7 +1050,11 @@
      11,
      14
     ],
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1123,7 +1179,11 @@
      4,
      11
     ],
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1210,7 +1270,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1266,7 +1330,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1350,7 +1418,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1404,7 +1476,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1463,7 +1539,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1583,7 +1663,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1596,7 +1676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -1604,6 +1684,23 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": false,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": true
+  },
+  "toc_position": {
+   "height": "317px",
+   "left": "1633.8px",
+   "right": "20px",
+   "top": "120px",
+   "width": "272px"
   }
  },
  "nbformat": 4,
