--- a/statistics/all-of-statistics/2-random-variables.ipynb
+++ b/statistics/all-of-statistics/2-random-variables.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -25,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -136,7 +144,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -182,7 +194,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -296,7 +312,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -392,7 +412,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -494,7 +518,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -754,7 +782,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -776,6 +808,10 @@
    "execution_count": 9,
    "metadata": {
     "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    },
     "scrolled": true
    },
    "outputs": [
@@ -866,7 +902,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1015,7 +1055,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1178,7 +1222,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1200,7 +1248,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1375,7 +1427,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1491,7 +1547,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1521,7 +1581,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1554,7 +1618,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1584,7 +1652,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1630,7 +1702,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1664,7 +1740,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1683,7 +1763,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1779,7 +1863,11 @@
      10,
      12
     ],
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1807,7 +1895,11 @@
      11,
      14
     ],
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1932,7 +2024,11 @@
      4,
      11
     ],
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2019,7 +2115,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2075,7 +2175,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2159,7 +2263,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2213,7 +2321,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2272,7 +2384,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -2392,7 +2508,7 @@
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2405,7 +2521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
@@ -2413,6 +2529,16 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "nav_menu": {},
+  "toc": {
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": false,
+   "threshold": 6,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
