--- a/programming/algos/graph-traversal.ipynb
+++ b/programming/algos/graph-traversal.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -103,7 +107,11 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -136,7 +144,11 @@
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -231,7 +243,11 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -255,7 +271,7 @@
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -268,14 +284,38 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   },
   "latex_envs": {
+   "LaTeX_envs_menu_present": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
-   "eqNumInitial": 0
+   "eqNumInitial": 0,
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "12px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
