--- a/books/learning-spark/3 - Programming with RDDs.ipynb
+++ b/books/learning-spark/3 - Programming with RDDs.ipynb
@@ -56,7 +56,11 @@
      "end_time": "2017-01-12T00:50:24.888730",
      "start_time": "2017-01-12T00:50:24.840116"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -94,7 +98,11 @@
      "end_time": "2017-01-12T00:52:35.893766",
      "start_time": "2017-01-12T00:52:35.889268"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -117,7 +125,11 @@
      "end_time": "2017-01-12T00:52:46.577409",
      "start_time": "2017-01-12T00:52:46.081322"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -173,7 +185,11 @@
      "end_time": "2017-01-12T00:58:33.484351",
      "start_time": "2017-01-12T00:58:33.324069"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -234,7 +250,11 @@
      "end_time": "2017-01-12T01:01:40.692446",
      "start_time": "2017-01-12T01:01:40.683718"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -289,7 +309,11 @@
      "end_time": "2017-01-12T01:16:31.477912",
      "start_time": "2017-01-12T01:16:31.473438"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -305,7 +329,11 @@
      "end_time": "2017-01-12T01:16:37.391077",
      "start_time": "2017-01-12T01:16:37.276095"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -342,7 +370,11 @@
      "end_time": "2017-01-12T01:16:38.622535",
      "start_time": "2017-01-12T01:16:38.593174"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -396,7 +428,11 @@
      "end_time": "2017-01-12T01:16:40.334368",
      "start_time": "2017-01-12T01:16:39.991381"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -489,7 +525,11 @@
      "end_time": "2017-01-12T01:24:33.214367",
      "start_time": "2017-01-12T01:24:33.209593"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -504,7 +544,11 @@
      "end_time": "2017-01-12T01:25:02.560198",
      "start_time": "2017-01-12T01:25:02.553372"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -547,7 +591,11 @@
      "end_time": "2017-01-12T01:28:16.592913",
      "start_time": "2017-01-12T01:28:16.581666"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -591,7 +639,11 @@
      "end_time": "2017-01-12T01:29:11.425067",
      "start_time": "2017-01-12T01:29:11.421272"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -645,7 +697,11 @@
      "end_time": "2017-01-12T01:33:53.222486",
      "start_time": "2017-01-12T01:33:53.098348"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -685,7 +741,11 @@
      "end_time": "2017-01-12T01:36:36.618202",
      "start_time": "2017-01-12T01:36:36.368945"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -739,7 +799,11 @@
      "end_time": "2017-01-12T01:46:35.261915",
      "start_time": "2017-01-12T01:46:34.265454"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -817,7 +881,11 @@
      "end_time": "2017-01-12T01:48:55.788829",
      "start_time": "2017-01-12T01:48:55.660244"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -841,7 +909,11 @@
      "end_time": "2017-01-12T01:50:53.121074",
      "start_time": "2017-01-12T01:50:53.016689"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -906,7 +978,11 @@
      "end_time": "2017-01-12T02:06:59.764585",
      "start_time": "2017-01-12T02:06:59.673978"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -967,7 +1043,11 @@
      "end_time": "2017-01-12T02:13:05.591791",
      "start_time": "2017-01-12T02:13:05.378789"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1032,7 +1112,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1057,7 +1141,11 @@
      "end_time": "2017-01-12T02:18:05.901320",
      "start_time": "2017-01-12T02:18:05.808267"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1081,7 +1169,11 @@
      "end_time": "2017-01-12T02:17:27.896548",
      "start_time": "2017-01-12T02:17:27.889496"
     },
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1143,7 +1235,11 @@
      "end_time": "2017-01-12T02:24:38.296596",
      "start_time": "2017-01-12T02:24:38.135348"
     },
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [
     {
@@ -1229,7 +1325,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1238,7 +1338,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1247,7 +1351,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1256,7 +1364,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1265,7 +1377,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
@@ -1274,7 +1390,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
