--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2016-08-24T02:05:14.670640",
-     "start_time": "2016-08-24T02:05:14.421194"
+     "end_time": "2017-01-14T01:18:09.046137",
+     "start_time": "2017-01-14T01:18:08.729430"
     },
     "collapsed": false,
     "run_control": {
@@ -21,7 +21,7 @@
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "import random as rnd\n",
+    "import random\n",
     "import os\n",
     "import math\n",
     "\n",
