--- a/programming/scala/programming-in-scala-odersky/ch-4.ipynb
+++ b/programming/scala/programming-in-scala-odersky/ch-4.ipynb
@@ -11,11 +11,34 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal {\n",
+    "    private var yo = 0\n",
+    "    def update_yo(n : Int) = yo = n\n",
+    "    def other_yo(other : Animal)\n",
+    "        print(other.yo)\n",
+    "}\n",
+    "\n",
+    "a1 = Animal\n",
+    "a1.update_yo(5)\n",
+    "a2 = Animal\n",
+    "a2.other_yo(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "1"
+   ]
   }
  ],
  "metadata": {
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Scala",
    "language": "scala",
