boilerplate: sort + pandas

--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-14T01:18:09.046137",
-     "start_time": "2017-01-14T01:18:08.729430"
+     "end_time": "2017-01-14T17:26:52.833147",
+     "start_time": "2017-01-14T17:26:52.621898"
     },
     "collapsed": false,
     "run_control": {
@@ -16,33 +16,30 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy as sp\n",
-    "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "import random\n",
-    "import os\n",
-    "import math\n",
-    "\n",
-    "# required for interactive plotting\n",
-    "from __future__ import print_function\n",
+    "import functools as ft\n",
+    "from graphviz import Digraph\n",
     "from ipywidgets import interact, interactive, fixed\n",
     "import ipywidgets as widgets\n",
-    "import numpy.polynomial as np_poly\n",
-    "\n",
     "from IPython.display import Math\n",
     "from IPython.display import Latex\n",
     "from IPython.display import HTML\n",
-    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import numpy.polynomial as np_poly\n",
+    "import os\n",
+    "import pandas as pd\n",
     "from pprint import pprint\n",
-    "import functools as ft\n",
+    "import random\n",
+    "import scipy as sp\n",
     "\n",
-    "from graphviz import Digraph\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "%matplotlib inline\n",
     "\n",
     "DIR_HOME = os.environ['HOME']\n",
     "DIR_REPOS = DIR_HOME + \"/neo-human/repos\"\n",
-    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\""
+    "DIR_BMLSP = DIR_REPOS + \"/luispedro/BuildingMachineLearningSystemsWithPython\"\n"
    ]
   },
   {
