--- a/books/learning-spark/3 - Programming with RDDs.ipynb
+++ b/books/learning-spark/3 - Programming with RDDs.ipynb
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T00:50:24.888730",
-     "start_time": "2017-01-12T00:50:24.840116"
+     "end_time": "2017-01-18T20:38:41.626252",
+     "start_time": "2017-01-18T20:38:41.251883"
     },
     "collapsed": false,
     "run_control": {
@@ -69,7 +69,7 @@
        "pyspark.rdd.RDD"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T00:52:35.893766",
-     "start_time": "2017-01-12T00:52:35.889268"
+     "end_time": "2017-01-18T20:38:41.632559",
+     "start_time": "2017-01-18T20:38:41.628842"
     },
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T00:52:46.577409",
-     "start_time": "2017-01-12T00:52:46.081322"
+     "end_time": "2017-01-18T20:38:42.257671",
+     "start_time": "2017-01-18T20:38:41.634850"
     },
     "collapsed": false,
     "run_control": {
@@ -138,7 +138,7 @@
        "u'high-level APIs in Scala, Java, Python, and R, and an optimized engine that'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,11 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T00:58:33.484351",
-     "start_time": "2017-01-12T00:58:33.324069"
+     "end_time": "2017-01-18T20:38:42.440103",
+     "start_time": "2017-01-18T20:38:42.260380"
     },
     "collapsed": false,
     "run_control": {
@@ -244,13 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:01:40.692446",
-     "start_time": "2017-01-12T01:01:40.683718"
+     "end_time": "2017-01-18T20:38:42.450968",
+     "start_time": "2017-01-18T20:38:42.442190"
     },
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -303,11 +303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:16:31.477912",
-     "start_time": "2017-01-12T01:16:31.473438"
+     "end_time": "2017-01-18T20:38:42.454813",
+     "start_time": "2017-01-18T20:38:42.452437"
     },
     "collapsed": true,
     "run_control": {
@@ -323,11 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:16:37.391077",
-     "start_time": "2017-01-12T01:16:37.276095"
+     "end_time": "2017-01-18T20:38:42.585355",
+     "start_time": "2017-01-18T20:38:42.456028"
     },
     "collapsed": false,
     "run_control": {
@@ -342,7 +342,7 @@
        "u' error: this is error'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:16:38.622535",
-     "start_time": "2017-01-12T01:16:38.593174"
+     "end_time": "2017-01-18T20:38:42.614441",
+     "start_time": "2017-01-18T20:38:42.586673"
     },
     "collapsed": false,
     "run_control": {
@@ -381,9 +381,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('type of errors_rdd:', <class 'pyspark.rdd.PipelinedRDD'>, 140271238701776)\n",
-      "('type of warn_rdd:', <class 'pyspark.rdd.PipelinedRDD'>, 140271238701840)\n",
-      "('type of bad_lines_rdd:', <class 'pyspark.rdd.RDD'>, 140271238703888)\n"
+      "('type of errors_rdd:', <class 'pyspark.rdd.PipelinedRDD'>, 140123726003152)\n",
+      "('type of warn_rdd:', <class 'pyspark.rdd.PipelinedRDD'>, 140123726003216)\n",
+      "('type of bad_lines_rdd:', <class 'pyspark.rdd.RDD'>, 140123725828304)\n"
      ]
     }
    ],
@@ -422,11 +422,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:16:40.334368",
-     "start_time": "2017-01-12T01:16:39.991381"
+     "end_time": "2017-01-18T20:38:43.005701",
+     "start_time": "2017-01-18T20:38:42.615755"
     },
     "collapsed": false,
     "run_control": {
@@ -519,13 +519,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:24:33.214367",
-     "start_time": "2017-01-12T01:24:33.209593"
+     "end_time": "2017-01-18T20:38:43.009625",
+     "start_time": "2017-01-18T20:38:43.007370"
     },
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -538,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:25:02.560198",
-     "start_time": "2017-01-12T01:25:02.553372"
+     "end_time": "2017-01-18T20:38:43.015728",
+     "start_time": "2017-01-18T20:38:43.010812"
     },
     "collapsed": true,
     "run_control": {
@@ -585,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:28:16.592913",
-     "start_time": "2017-01-12T01:28:16.581666"
+     "end_time": "2017-01-18T20:38:43.022366",
+     "start_time": "2017-01-18T20:38:43.016981"
     },
     "collapsed": true,
     "run_control": {
@@ -633,11 +633,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:29:11.425067",
-     "start_time": "2017-01-12T01:29:11.421272"
+     "end_time": "2017-01-18T20:38:43.027898",
+     "start_time": "2017-01-18T20:38:43.023791"
     },
     "collapsed": true,
     "run_control": {
@@ -691,11 +691,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:33:53.222486",
-     "start_time": "2017-01-12T01:33:53.098348"
+     "end_time": "2017-01-18T20:38:43.160146",
+     "start_time": "2017-01-18T20:38:43.031639"
     },
     "collapsed": false,
     "run_control": {
@@ -735,11 +735,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:36:36.618202",
-     "start_time": "2017-01-12T01:36:36.368945"
+     "end_time": "2017-01-18T20:38:43.484489",
+     "start_time": "2017-01-18T20:38:43.162073"
     },
     "collapsed": false,
     "run_control": {
@@ -793,11 +793,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:46:35.261915",
-     "start_time": "2017-01-12T01:46:34.265454"
+     "end_time": "2017-01-18T20:38:44.928249",
+     "start_time": "2017-01-18T20:38:43.486535"
     },
     "collapsed": false,
     "run_control": {
@@ -875,11 +875,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:48:55.788829",
-     "start_time": "2017-01-12T01:48:55.660244"
+     "end_time": "2017-01-18T20:38:45.020034",
+     "start_time": "2017-01-18T20:38:44.929522"
     },
     "collapsed": false,
     "run_control": {
@@ -903,11 +903,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T01:50:53.121074",
-     "start_time": "2017-01-12T01:50:53.016689"
+     "end_time": "2017-01-18T20:38:45.109345",
+     "start_time": "2017-01-18T20:38:45.021905"
     },
     "collapsed": false,
     "run_control": {
@@ -972,11 +972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T02:06:59.764585",
-     "start_time": "2017-01-12T02:06:59.673978"
+     "end_time": "2017-01-18T20:38:45.199714",
+     "start_time": "2017-01-18T20:38:45.110911"
     },
     "collapsed": false,
     "run_control": {
@@ -1037,11 +1037,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T02:13:05.591791",
-     "start_time": "2017-01-12T02:13:05.378789"
+     "end_time": "2017-01-18T20:38:45.496134",
+     "start_time": "2017-01-18T20:38:45.201620"
     },
     "collapsed": false,
     "run_control": {
@@ -1054,7 +1054,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 2, 11, 5, 14, 17, 13, 0, 19, 9, 7, 16, 15, 8, 12, 1, 10, 18, 3, 4]\n",
+      "[2, 5, 0, 8, 16, 11, 12, 19, 1, 10, 7, 4, 18, 13, 9, 6, 17, 15, 3, 14]\n",
       "[]\n",
       "[19]\n",
       "[19, 18]\n"
@@ -1110,15 +1110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2017-01-18T20:38:45.676858",
+     "start_time": "2017-01-18T20:38:45.499364"
+    },
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('rdd_1.count():', 5)\n",
+      "('rdd_1.countByValue():', defaultdict(<type 'int'>, {'tea': 1, 'coffee': 2, 'panda': 1, 'monkey': 1}))\n"
+     ]
+    }
+   ],
    "source": [
     "rdd_1 = sc.parallelize([\"coffee\", \"coffee\", \"panda\", \"monkey\", \"tea\"])\n",
     "\n",
@@ -1135,11 +1148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T02:18:05.901320",
-     "start_time": "2017-01-12T02:18:05.808267"
+     "end_time": "2017-01-18T20:38:45.762021",
+     "start_time": "2017-01-18T20:38:45.680279"
     },
     "collapsed": false,
     "run_control": {
@@ -1163,11 +1176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T02:17:27.896548",
-     "start_time": "2017-01-12T02:17:27.889496"
+     "end_time": "2017-01-18T20:38:45.796177",
+     "start_time": "2017-01-18T20:38:45.764161"
     },
     "collapsed": true,
     "run_control": {
@@ -1229,11 +1242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-01-12T02:24:38.296596",
-     "start_time": "2017-01-12T02:24:38.135348"
+     "end_time": "2017-01-18T20:38:45.970402",
+     "start_time": "2017-01-18T20:38:45.798567"
     },
     "collapsed": false,
     "run_control": {
