--- a/statistics/all-of-statistics/Regression.ipynb
+++ b/statistics/all-of-statistics/Regression.ipynb
@@ -109,10 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -133,8 +130,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
