--- a/statistics/all-of-statistics/cumulant.ipynb
+++ b/statistics/all-of-statistics/cumulant.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -122,8 +119,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
